--- a/数据结构题目/1、数组.md
+++ b/数据结构题目/1、数组.md
@@ -537,7 +537,8 @@ class Solution {
         int start = 0;  // 每次循环的开始点(start, start)
         int count = 1;  // 定义填充数字
         int i, j;
-
+		
+      // n/2: 每个圈循环几次，例如n为奇数3，那么loop = 1 只是循环一圈，矩阵中间的值需要单独处理	
         while (loop++ < n / 2) { // 判断边界后，loop从1开始
             // 模拟上侧从左到右
             for (j = start; j < n - loop; j++) {
@@ -569,6 +570,82 @@ class Solution {
     }
 }
 ```
+
+
+
+### 二刷
+
+> 思路：
+>
+> 首先，初始化一个 n x n 的矩阵和坐标 x、y 为 (0, 0)，以及一个计数器 index 为 1。
+>
+> 然后，在一个大循环中，当 x 和 y 坐标在矩阵范围内且对应位置的值为 0 时，执行以下四个步骤：
+>
+> 1. 向右移动，将矩阵的当前行填满。
+> 2. 向下移动，将矩阵的当前列填满。
+> 3. 向左移动，将矩阵的当前行填满。
+> 4. 向上移动，将矩阵的当前列填满。
+>
+> 每次移动后，都会更新 x 和 y 坐标以及计数器 index。这个过程会一直重复，直到矩阵的所有位置都被填充或者遇到已经填充过的元素。
+>
+> 最后，返回填充好的矩阵。这个方法能够生成一个按照螺旋顺序填充的 n x n 矩阵。
+
+```java
+class Solution {
+    public int[][] generateMatrix(int n) {
+        // 初始化一个 n x n 的矩阵，用于存储结果
+        int[][] res = new int[n][n];
+
+        // 初始化坐标 x, y 为 (0, 0)
+        int x = 0;
+        int y = 0;
+
+        // 初始化计数器 index 为 1，用于填充矩阵的值
+        int index = 1;
+
+        // 当 x 和 y 坐标都在矩阵范围内且对应位置的值为 0 时，继续循环
+        while(x < n && y < n && res[x][y] == 0){
+            // 向右移动，将矩阵的当前行填满
+            while(y < n && res[x][y] == 0){
+                res[x][y] = index++;
+                y++;
+            }
+            x++; // 移动到下一行
+            y--; // 回到该行的最左边
+
+            // 向下移动，将矩阵的当前列填满
+            while(x < n && res[x][y] == 0){
+                res[x][y] = index++;
+                x++;
+            }
+
+            x--; // 回到上一行
+            y--; // 移动到下一列的最上边
+
+            // 向左移动，将矩阵的当前行填满
+            while(y >= 0 && res[x][y] == 0){
+                res[x][y] = index++;
+                y--;
+            }
+
+            y++; // 移动到下一行
+            x--; // 回到该行的最右边
+
+            // 向上移动，将矩阵的当前列填满
+            while(x >= 0 && res[x][y] == 0){
+                res[x][y] = index++;
+                x--;
+            }
+            x++; // 移动到下一行
+            y++; // 移动到下一列的最下边
+        }
+
+        return res; // 返回填充好的矩阵
+    }
+}
+```
+
+
 
 
 
