--- a/数据结构题目/2、链表.md
+++ b/数据结构题目/2、链表.md
@@ -76,7 +76,7 @@ class Solution {
 
 ------
 
-###修改后：
+###修改后：(还是错的)
 
 ```java
 class Solution {
@@ -102,6 +102,42 @@ class Solution {
     }
 }
 ```
+
+
+
+### 二刷
+
+```java
+class Solution {
+    // 定义一个方法removeElements，输入参数为链表的头节点head和要移除的值val
+    public ListNode removeElements(ListNode head, int val) {
+        // 当头节点不为空且头节点的值等于要移除的值时，不断更新头节点为它的下一个节点
+        // 这一步是为了确保返回的新链表的头节点不包含要移除的值
+        while(head != null && head.val == val){
+            head = head.next;
+        }
+
+        // 定义一个新的节点node，初始值为经过第一步处理后的头节点
+        ListNode node = head;
+        
+        // 遍历整个链表
+        while(node != null){
+            // 当当前节点的下一个节点不为空且下一个节点的值等于要移除的值时，
+            // 将当前节点的next指针指向下一个节点的下一个节点，即跳过这个要移除的节点
+            while(node.next != null && node.next.val == val){
+                node.next = node.next.next;
+            }
+            // 更新当前节点为它的下一个节点，继续遍历
+            node = node.next;
+        }
+
+        // 返回处理后的新链表的头节点
+        return head;
+    }
+}
+```
+
+
 
 
 
