--- a/数据结构题目/2、链表.md
+++ b/数据结构题目/2、链表.md
@@ -360,6 +360,126 @@ class MyLinkedList {
 
 
 
+
+
+### 二刷
+
+用的单链表
+
+```java
+// 定义链表节点
+public class ListNode {
+    int val;
+    ListNode next;
+
+    // 无参构造函数
+    public ListNode() {}
+
+    // 带参构造函数
+    public ListNode(int val) {
+        this.val = val;
+    }
+}
+
+// 实现自定义链表类
+class MyLinkedList {
+
+    int size;         // 链表大小
+    ListNode head;    // 链表头节点
+
+    // 构造函数，初始化链表头节点
+    public MyLinkedList() {
+        this.head = new ListNode();
+    }
+
+    // 获取链表中指定索引处的节点值
+    public int get(int index) {
+        // 如果索引大于等于链表大小，返回-1
+        if (this.size <= index) {
+            return -1;
+        }
+
+        // 从头节点开始，遍历到指定索引处的节点
+        ListNode node = this.head.next;
+        for (int i = 0; i < index; i++) {
+            node = node.next;
+        }
+
+        // 返回指定节点的值
+        return node.val;
+    }
+
+    // 在链表头部添加节点
+    public void addAtHead(int val) {
+        // 创建新节点
+        ListNode node = new ListNode(val);
+        // 将新节点连接到当前头节点的下一个节点
+        node.next = this.head.next;
+        // 更新头节点的下一个节点为新节点
+        head.next = node;
+        // 增加链表大小
+        this.size++;
+    }
+
+    // 在链表尾部添加节点
+    public void addAtTail(int val) {
+        // 创建新节点
+        ListNode node = new ListNode(val);
+        // 从头节点开始，找到链表尾部节点
+        ListNode index = this.head;
+        while (index.next != null) {
+            index = index.next;
+        }
+        // 将新节点连接到尾部节点的下一个节点
+        index.next = node;
+        // 增加链表大小
+        this.size++;
+    }
+
+    // 在链表指定索引处添加节点
+    public void addAtIndex(int index, int val) {
+        // 如果索引大于链表大小，直接返回
+        if (this.size < index) {
+            return;
+        }
+
+        // 从头节点开始，找到指定索引处的节点
+        ListNode node = this.head;
+        for (int i = 0; i < index; i++) {
+            node = node.next;
+        }
+        // 创建新节点
+        ListNode newNode = new ListNode(val);
+        // 将新节点连接到指定节点的下一个节点
+        newNode.next = node.next;
+        // 更新指定节点的下一个节点为新节点
+        node.next = newNode;
+        // 增加链表大小
+        this.size++;
+    }
+
+    // 删除链表指定索引处的节点
+    public void deleteAtIndex(int index) {
+        // 如果索引大于等于链表大小，直接返回
+        if (this.size <= index) {
+            return;
+        }
+
+        // 从头节点开始，找到指定索引处的前一个节点
+        ListNode node = this.head;
+        for (int i = 0; i < index; i++) {
+            node = node.next;
+        }
+        // 更新前一个节点的下一个节点为指定节点的下一个节点，即删除指定节点
+        node.next = node.next.next;
+        // 减少链表大小
+        this.size--;
+    }
+}
+```
+
+
+
 ## 三、反转链表
 
 ###题目
