--- a/数据结构题目/2、链表.md
+++ b/数据结构题目/2、链表.md
@@ -556,6 +556,45 @@ class Solution {
 
 
 
+### 二刷
+
+使用三个指针分别表示原链表中的前一个节点、当前节点和后一个节点。在循环中，每次都将当前节点的next指向前一个节点，然后将三个指针向前移动一位，直到遍历完整个链表。最后，返回原链表的尾部作为反转后的新头部。
+
+```java
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        // 如果链表为空或只有一个元素，无需反转，直接返回head
+        if(head == null || head.next == null){
+            return head;
+        }
+
+        // 初始化三个指针：prev（前一个节点），cur（当前节点），post（后一个节点）
+        ListNode prev = null;
+        ListNode cur = head;
+        ListNode post = head.next;
+
+        // 当后一个节点不为空时，执行循环
+        while(post != null){
+            // 将当前节点的next指向前一个节点，实现反转
+            cur.next = prev;
+
+            // 前一个节点、当前节点和后一个节点依次向前移动一位
+            prev = cur;
+            cur = post;
+            post = post.next;
+        }
+        // 处理链表尾部的情况，将最后一个节点的next指向null
+        cur.next = prev;
+
+        return cur;
+    }
+}
+```
+
+
+
+
+
 
 
 ------
