--- a/数据结构题目/2、链表.md
+++ b/数据结构题目/2、链表.md
@@ -695,6 +695,65 @@ class Solution {
 }
 ```
 
+
+
+### 二刷：
+
+```java
+class Solution {
+    public ListNode swapPairs(ListNode head) {
+        // 初始化指针：node 用于遍历链表，tmp 用于临时存储下一个节点，prev 用于存储已交换节点的前一个节点
+        ListNode node = head;
+        ListNode tmp;
+        ListNode prev;
+
+        // 处理链表至少有两个节点的情况
+        if(node != null && node.next != null){
+            // 将第一个节点对进行交换
+            tmp = node.next; // tmp 指向第二个节点
+            node.next = tmp.next; // 将第一个节点的 next 指向第三个节点（原第二个节点的下一个节点）
+            tmp.next = node; // 将第二个节点的 next 指向第一个节点
+
+            // 更新 prev 和 head 指针
+            prev = node; // prev 指向第一个节点
+            head = tmp; // 更新 head 指针为新的第一个节点（原第二个节点）
+            node = node.next; // node 指向新的第二个节点（原第三个节点）
+        }else{
+            // 如果链表长度小于 2，则直接返回原链表
+            return head;
+        }
+
+        // 遍历剩余的节点对并进行交换
+        while(node != null && node.next != null){
+            // 交换当前节点对
+            tmp = node.next; // tmp 指向当前节点的下一个节点
+            node.next = tmp.next; // 将当前节点的 next 指向下一个节点的下一个节点
+            tmp.next = node; // 将下一个节点的 next 指向当前节点
+
+            // 更新 prev 节点的 next 指针
+            prev.next = tmp; // 将 prev 节点的 next 指针指向新交换的节点
+
+            // 更新 prev 和 node 指针
+            prev = node; // prev 指向当前节点
+            node = node.next; // node 指向新的下一个节点
+        }
+
+        // 返回交换节点对后的链表头节点
+        return head;
+    }
+}
+```
+
+使用三个指针（node、tmp 和 prev）来遍历和交换链表中的节点对。
+
+首先处理链表的前两个节点，然后在 while 循环中遍历剩余的节点对并进行交换。
+
+在每次交换后，更新 prev 节点的 next 指针以保持链表的连续性。
+
+最后返回交换节点对后的链表头节点。
+
+
+
 ------
 
 ###**答案：**![](https://code-thinking.cdn.bcebos.com/pics/24.%E4%B8%A4%E4%B8%A4%E4%BA%A4%E6%8D%A2%E9%93%BE%E8%A1%A8%E4%B8%AD%E7%9A%84%E8%8A%82%E7%82%B91.png)
