--- a/数据结构题目/2、链表.md
+++ b/数据结构题目/2、链表.md
@@ -983,6 +983,91 @@ public class Solution {
 
 
 
+### 二刷
+
+和答案的思路差不多：
+
+1. 首先判断两个链表是否为空，如果任意一个为空，则直接返回null，表示没有交点。
+2. 定义两个指针，分别指向两个链表的头节点。
+3. 当两个指针都未到达链表尾部时，同时移动两个指针。
+4. 当一个指针到达链表尾部时，计算两个链表的长度差，并将未到达尾部的指针移动到尾部。
+5. 如果两个指针不在同一个位置，说明没有交点，返回null。
+6. 根据长度差，将较短的链表的指针向前移动，使两个指针位于同一位置。
+7. 同时向前移动两个指针，直到找到交点或者确定没有交点。
+8. 返回交点。如果没有交点，则返回null。
+
+```java
+public class Solution {
+    // 定义一个方法，输入为两个链表的头节点，输出为两个链表的交点（如果存在的话）
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+        // 如果两个链表的头节点任意一个为空，则没有交点，返回null
+        if(headA == null || headB == null){
+            return null;
+        }
+
+        // 定义两个指针，分别指向两个链表的头节点
+        ListNode node1 = headA;
+        ListNode node2 = headB;
+
+        // 当两个指针都未到达链表尾部时，继续移动指针
+        while(node1.next != null && node2.next != null){
+            node1 = node1.next;
+            node2 = node2.next;
+        }
+
+        // 计算两个链表长度的差值
+        int len = 0;
+        if(node1.next == null){
+            // 如果node1先到达链表尾部，将node2移动到尾部并计算长度差
+            while(node2.next != null){
+                len++;
+                node2 = node2.next;
+            }
+            // 如果node1和node2不在同一个位置，说明没有交点，返回null
+            if(node1 != node2){
+                return null;
+            }
+            // 将node2重置为headB，node1重置为headA
+            node2 = headB;
+            node1 = headA;
+            // 根据长度差，将较短的链表的指针向前移动，使两个指针位于同一位置
+            for(int i = 0; i < len; i++){
+                node2 = node2.next;
+            }
+        }else{
+            // 如果node2先到达链表尾部，处理方式与上述情况类似
+            while(node1.next != null){
+                len++;
+                node1 = node1.next;
+            }
+            if(node1 != node2){
+                return null;
+            }
+            node2 = headB;
+            node1 = headA;
+            for(int i = 0; i < len; i++){
+                node1 = node1.next;
+            }
+        }
+
+        // 当两个指针在同一位置后，同时向前移动指针，直到找到交点或者确定没有交点
+        while(node1 != node2){
+            node1 = node1.next;
+            node2 = node2.next;
+        }
+        
+        // 返回交点
+        return node1;
+    }
+}
+```
+
+
+
+
+
+
+
 ------
 
 ### 答案思路
