--- a/数据结构题目/3、哈希表.md
+++ b/数据结构题目/3、哈希表.md
@@ -89,6 +89,75 @@ public boolean isAnagram2(String s, String t) {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public boolean isAnagram(String s, String t) {
+        int[] record = new int[26];
+
+        for(int i = 0; i < s.length(); i++){
+            record[s.charAt(i) - 'a']++;
+        }
+
+        for(int i = 0; i < t.length(); i++){
+            record[t.charAt(i) - 'a']--;
+        }
+
+        for(int i = 0; i < 26; i++){
+            if(record[i] != 0){
+                return false;
+            }
+        }
+
+        return true;
+    }
+}
+```
+
+如果输入字符串包含 unicode 字符：
+
+```java
+class Solution {
+    public boolean isAnagram(String s, String t) {
+        // 使用HashMap存储字符及其出现次数
+        Map<Character, Integer> record = new HashMap<>();
+
+        for(char c : s.toCharArray()){
+            record.put(c, record.getOrDefault(c, 0) + 1);
+        }
+
+        for(char c : t.toCharArray()){
+            // 如果t中的字符在记录中不存在或者数量已经为零，则说明不是异位词
+            if (!record.containsKey(c) || record.get(c) == 0) {
+                return false;
+            }
+            // 否则，减去一次该字符出现的次数
+            record.put(c, record.get(c) - 1);
+        }
+
+        // 检查map中是否有剩余的计数不为零，如果有则不是异位词
+        for (int count : record.values()) {
+            if (count != 0) {
+                return false;
+            }
+        }
+
+        return true;
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
 ## 二、两个数组的交集
 
 ### 题目
