--- a/数据结构题目/3、哈希表.md
+++ b/数据结构题目/3、哈希表.md
@@ -202,6 +202,47 @@ class Solution {
 }
 ```
 
+
+
+### 二刷
+
+```java
+class Solution {
+    public int[] intersection(int[] nums1, int[] nums2) {
+        // 创建一个HashSet（无序且不包含重复元素的集合）来存储nums1中的所有唯一元素
+        Set<Integer> set = new HashSet<>();
+        
+        // 遍历第一个整数数组nums1
+        for (int num1 : nums1) {
+            // 将每个元素添加到set中
+            set.add(num1);
+        }
+
+        // 创建另一个HashSet res，用于存储两个数组交集的结果
+        Set<Integer> res = new HashSet<>();
+
+        // 遍历第二个整数数组nums2
+        for (int num2 : nums2) {
+            // 检查num2是否存在于前面创建的set中
+            if (set.contains(num2)) {
+                // 如果存在，则将此元素添加到结果集res中
+                res.add(num2);
+            }
+        }
+
+        // 使用Java 8 Stream API将结果集res中的Integer元素转换为int类型并存储到一个新的数组中
+        // .stream()将集合转换为流
+        // .mapToInt(x -> x)将每个Integer对象映射为其对应的int值
+        // .toArray()将流转换为数组
+        return res.stream().mapToInt(x -> x).toArray();
+    }
+}
+```
+
+
+
+
+
 ### 答案代码
 
 思路差不多~	
