--- a/数据结构题目/3、哈希表.md
+++ b/数据结构题目/3、哈希表.md
@@ -348,6 +348,53 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public boolean isHappy(int n) {
+        // 创建一个HashSet（无序且不包含重复元素的集合），用于存储在循环计算过程中遇到的中间结果
+        Set<Integer> set = new HashSet<Integer>();
+
+        // 将原始输入值赋给变量num，作为当前待处理的数字
+        int num = n;
+
+        // 使用while循环，当num不在set中时继续执行循环体内的操作
+        while (!set.contains(num)) {
+            set.add(num);
+
+            // 创建一个临时变量tmp，初始值为num，用于进行平方和计算
+            int tmp = num;
+
+            // 初始化num为0，准备累计每个位数平方后的结果
+            num = 0;
+
+            // 内层while循环：将tmp的每一位数字平方后相加
+            while (tmp != 0) {
+                // 取tmp的个位数并平方，累加到num上
+                num += (tmp % 10) * (tmp % 10);
+                // 将tmp向左移动一位，去掉已经平方过的个位数
+                tmp /= 10;
+            }
+
+            // 如果经过一轮计算后num等于1，则说明n是一个快乐数，返回true
+            if (num == 1) {
+                return true;
+            }
+        }
+
+        // 若循环结束仍未找到num等于1的情况，说明n不是快乐数，返回false
+        return false;
+    }
+}
+```
+
+
+
+
+
+
+
 ### 答案代码
 
 注意：创建HashSet的时候最好指定类型。
