--- a/数据结构题目/3、哈希表.md
+++ b/数据结构题目/3、哈希表.md
@@ -496,6 +496,45 @@ class Solution {
 
 ------
 
+### 二刷
+
+```java
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        // 创建一个HashMap用于存储遍历过程中遇到的数值及其对应的索引
+        Map<Integer, Integer> map = new HashMap<>();
+        
+        // 获取输入数组的长度
+        int len = nums.length;
+
+        // 遍历输入数组
+        for (int i = 0; i < len; i++) {
+            // 计算当前元素与目标值的差值，如果该差值不在HashMap中
+            if (!map.containsKey(target - nums[i])) {
+                // 将当前元素及其索引存入HashMap
+                map.put(nums[i], i);
+            } else {
+                // 如果差值存在于HashMap中，则找到了两个数之和等于目标值的组合
+                // 创建并初始化结果数组，包含两个满足条件的元素的索引
+                int[] arr = {map.get(target - nums[i]), i};
+                
+                // 返回找到的满足条件的索引数组
+                return arr;
+            }
+        }
+
+        // 如果没有找到满足条件的组合，返回null
+        return null;
+    }
+}
+```
+
+
+
+
+
+
+
 ### 答案思路
 
 * 使用HashMap，key中存放数值，value存在数值下标
