--- a/数据结构题目/3、哈希表.md
+++ b/数据结构题目/3、哈希表.md
@@ -590,6 +590,56 @@ public int[] twoSum(int[] nums, int target) {
 
 ------
 
+
+
+### 二刷
+
+```java
+class Solution {
+    public int fourSumCount(int[] nums1, int[] nums2, int[] nums3, int[] nums4) {
+        // 创建一个HashMap，键值对为Integer类型，用于存储nums1数组元素与nums2数组元素之和及其出现次数
+        Map<Integer, Integer> map = new HashMap<>();
+        
+        // 获取nums1数组的长度，并将其赋值给变量len
+        int len = nums1.length;
+        // 初始化结果变量res为0，用于记录满足条件的组合数
+        int res = 0;
+
+        // 双层循环遍历nums1和nums2数组，计算每一对元素之和，并在map中累加其出现次数
+        for (int i = 0; i < len; i++) {
+            for (int j = 0; j < len; j++) {
+                // 计算当前索引i和j指向的nums1和nums2数组元素之和
+                int tmp = nums1[i] + nums2[j];
+                // 在map中更新该和出现的次数，如果不存在则默认为0再加1
+                map.put(tmp, map.getOrDefault(tmp, 0) + 1);
+            }
+        }
+
+        // 再次进行双层循环遍历nums3和nums4数组，计算每一对元素之和的负值
+        for (int i = 0; i < len; i++) {
+            for (int j = 0; j < len; j++) {
+                // 计算当前索引i和j指向的nums3和nums4数组元素之和的相反数
+                int tmp = 0 - (nums3[i] + nums4[j]);
+                
+                // 判断map中是否存在此相反数作为键，若存在，则将对应值累加到结果变量res中
+                if (map.containsKey(tmp)) {
+                    res += map.get(tmp);
+                }
+            }
+        }
+
+        // 返回最终统计到的满足条件的组合数
+        return res;
+    }
+}
+```
+
+
+
+
+
+
+
 ### 答案思路
 
 1. 首先定义 一个HashMap，key放i和j两数之和，value 放i和j两数之和出现的次数。
