--- a/数据结构题目/3、哈希表.md
+++ b/数据结构题目/3、哈希表.md
@@ -723,6 +723,49 @@ class Solution {
 
 ------
 
+
+
+### 二刷
+
+```java
+class Solution {
+    public boolean canConstruct(String ransomNote, String magazine) {
+        // 初始化一个长度为26的整型数组，用于记录杂志中每个字母出现的次数
+        int[] magazineArr = new int[26];
+
+        // 遍历杂志字符串，计算每个字符（小写英文字母）出现的次数，并存储在magazineArr数组中
+        for(int i = 0; i < magazine.length(); i++){
+            // 计算字母在数组中的索引（'a' - 'a' = 0, 'b' - 'a' = 1, ...）
+            int index = magazine.charAt(i) - 'a';
+            // 对相应索引位置的计数器加1
+            magazineArr[index]++;
+        }
+
+        // 遍历赎金信字符串，模拟消耗magazine中的字符来构建ransomNote
+        for(int i = 0; i < ransomNote.length(); i++){
+            // 同样计算当前字符在数组中的索引
+            int index = ransomNote.charAt(i) - 'a';
+            // 对相应索引位置的计数器减1，表示该字符被使用了一次
+            magazineArr[index]--;
+        }
+
+        // 检查magazineArr数组中是否存在负数，如果有，则表示某个字符在magazine中的数量不足以构建ransomNote
+        for(int i = 0; i < 26; i++){
+            if(magazineArr[i] < 0){
+                return false;
+            }
+        }
+
+        // 如果所有字符都能够满足构建ransomNote的需求，则返回true
+        return true;
+    }
+}
+```
+
+
+
+
+
 ### 答案代码
 
 思路一致，还需要改进：
