--- a/数据结构题目/3、哈希表.md
+++ b/数据结构题目/3、哈希表.md
@@ -891,6 +891,78 @@ class Solution {
 
 ![](https://code-thinking.cdn.bcebos.com/gifs/15.%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.gif)
 
+### 二刷
+
+```java
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        List<List<Integer>> result = new ArrayList<>();
+
+        // 先对输入数组进行排序
+        Arrays.sort(nums);
+
+        // 遍历整个数组（从第一个元素开始）
+        for (int i = 0; i < nums.length; i++) {
+            // 如果当前元素大于0，则后面的元素也必定大于0，无法组成和为0的三元组，提前返回结果
+            if (nums[i] > 0) {
+                return result;
+            }
+
+            // 当前元素与前一个元素相等时，跳过此次循环，避免添加重复的三元组
+            if (i > 0 && nums[i] == nums[i - 1]) {
+                continue;
+            }
+
+            // 初始化双指针left和right，left指向当前元素的下一个位置，right指向数组末尾
+            int left = i + 1;
+            int right = nums.length - 1;
+
+            // 双指针遍历，查找和为0的两个数
+            while (right > left) {
+                // 计算当前三个数之和
+                int sum = nums[i] + nums[left] + nums[right];
+
+                // 如果和大于0，说明right指针所指的数太大，将其左移一位
+                if (sum > 0) {
+                    right--;
+                }
+                // 如果和小于0，说明left指针所指的数太小，将其右移一位
+                else if (sum < 0) {
+                    left++;
+                }
+                // 和等于0时，找到一组符合条件的三元组，加入结果集
+                else {
+                    result.add(Arrays.asList(nums[i], nums[left], nums[right]));
+
+                    // 移除重复的三元组：如果right指针所指的数与其前一个数相等，将right向左移动一位
+                    while (right > left && nums[right] == nums[right - 1]) {
+                        right--;
+                    }
+
+                    // 同理，移除left指针所指的数与其后一个数相等的情况
+                    while (right > left && nums[left] == nums[left + 1]) {
+                        left++;
+                    }
+
+                    // 更新左右指针的位置，继续查找其他可能的三元组
+                    right--;
+                    left++;
+                }
+            }
+        }
+
+        // 返回最终结果，即所有和为0的不重复三元组列表
+        return result;
+    }
+}
+```
+
+先对数组进行排序，然后固定一个数，利用双指针法在剩余数组中寻找另外两个数，使得三个数之和为0，同时在此过程中去重，确保结果中不包含重复的三元组。
+
+
+
+
+
 ### 答案思路
 
 ①定义三个数组，i、left、right，i为遍历数组，left在i+1处，right在最后一个坐标处。
