--- a/数据结构题目/3、哈希表.md
+++ b/数据结构题目/3、哈希表.md
@@ -1086,6 +1086,83 @@ class Solution {
 
 ------
 
+
+
+### 二刷
+
+```java
+class Solution {
+    public List<List<Integer>> fourSum(int[] nums, int target) {
+        List<List<Integer>> result = new ArrayList<>();
+        Arrays.sort(nums);
+
+        // 外层循环，遍历数组中的第一个数
+        for (int i = 0; i < nums.length; i++) {
+            // 如果当前数大于 0 并且大于目标值，则后面的数更大，可以直接返回结果
+            if (nums[i] > 0 && nums[i] > target) {
+                return result;
+            }
+
+            // 跳过重复的数，避免产生重复组合
+            if (i > 0 && nums[i] == nums[i - 1]) {
+                continue;
+            }
+
+            // 中间层循环，遍历数组中的第二个数
+            for (int j = i + 1; j < nums.length; j++) {
+                // 跳过与前一数重复的数，避免重复组合
+                if (j > i + 1 && nums[j] == nums[j - 1]) {
+                    continue;
+                }
+
+                // 定义双指针 left 和 right 分别指向第三个数和第四个数的起始位置
+                int left = j + 1;
+                int right = nums.length - 1;
+
+                // 双指针内层循环，寻找剩余两个数使它们与已选择的两个数之和等于目标值
+                while (left < right) {
+                    int sum = nums[i] + nums[j] + nums[left] + nums[right];
+
+                    // 若当前四数之和大于目标值，右指针左移
+                    if (sum > target) {
+                        right--;
+                    }
+                    // 若当前四数之和小于目标值，左指针右移
+                    else if (sum < target) {
+                        left++;
+                    }
+                    // 若当前四数之和等于目标值，将这四个数添加到结果列表，并移动左右指针跳过重复数
+                    else {
+                        result.add(Arrays.asList(nums[i], nums[j], nums[left], nums[right]));
+
+                        // 移动左指针跳过重复的数
+                        while (left < right && nums[left] == nums[left + 1]) {
+                            left++;
+                        }
+                        // 移动右指针跳过重复的数
+                        while (left < right && nums[right] == nums[right - 1]) {
+                            right--;
+                        }
+
+                        left++;
+                        right--;
+                    }
+                }
+            }
+        }
+
+        // 返回最终结果列表
+        return result;
+    }
+}
+```
+
+通过排序数组并使用三层嵌套循环来遍历数组元素以找到可能的四数之和组合。为了减少计算量和避免重复组合，内部使用了双指针技巧进行优化。在每层循环中，都进行了重复数的判断和处理，确保了结果列表中不会包含重复的四数之和组合。
+
+
+
+
+
 ### 答案思路
 
 ※在三数之和的基础上，加多一层for循环，在指针i后面面加多一个指针j，将nums[i]和nums[j]看作是一个整体，left在j后面，移动left和right。
