--- a/数据结构题目/4、字符串.md
+++ b/数据结构题目/4、字符串.md
@@ -29,6 +29,29 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public void reverseString(char[] s) {
+        int left = 0;
+        int right = s.length - 1;
+        while(left < right){
+            char tmp = s[left];
+            s[left] = s[right];
+            s[right] = tmp;
+
+            left++;
+            right--;
+        }
+    }
+}
+```
+
+
+
+
+
 ### 答案代码
 
 思路相同
