--- a/数据结构题目/4、字符串.md
+++ b/数据结构题目/4、字符串.md
@@ -153,6 +153,57 @@ class Solution {
 
 
 
+
+
+### 二刷
+
+```java
+class Solution {
+    public String reverseStr(String s, int k) {
+        // 将输入字符串s转换为字符数组arr，并获取其长度len
+        char[] arr = s.toCharArray();
+        int len = arr.length;
+
+        // 遍历整个字符串，每次处理长度为2k的子串（如果剩余不足2k则处理剩余部分）
+        for (int i = 0; i < len / (2 * k); i++) {
+            // 计算当前需要翻转的子串的左右边界（前k个字符）
+            int left = i * 2 * k;
+            int right = left + k - 1;
+
+            // 调用reverse方法对当前子串进行翻转
+            reverse(arr, left, right);
+        }
+
+        // 处理剩余不足2k的部分
+        int last = len % (2 * k);
+        if (last < k) {
+            // 如果剩余字符少于k个，则翻转剩余的所有字符
+            reverse(arr, len - last, len - 1);
+        } else {
+            // 否则翻转剩余字符中的前k个字符
+            reverse(arr, len - last, len - last + k - 1);
+        }
+
+        // 将处理后的字符数组再转换回String并返回
+        return new String(arr);
+    }
+
+    private void reverse(char[] arr, int left, int right) {
+        // 当左边界小于右边界时，不断交换左右两个位置的字符
+        while (left < right) {
+            char tmp = arr[right];
+            arr[right] = arr[left];
+            arr[left] = tmp;
+
+            left++;
+            right--;
+        }
+    }
+}
+```
+
+
+
 ### 答案代码
 
 ```java
@@ -184,6 +235,31 @@ class Solution {
     }
 }
 
+```
+
+
+
+```java
+class Solution {
+    public String reverseStr(String s, int k) {
+        char[] ch = s.toCharArray();
+        for(int i = 0;i < ch.length;i += 2 * k){
+            int start = i;
+            // 判断尾数够不够k个来取决end指针的位置
+            int end = Math.min(ch.length - 1,start + k - 1);
+            while(start < end){
+                
+                char temp = ch[start];
+                ch[start] = ch[end];
+                ch[end] = temp;
+
+                start++;
+                end--;
+            }
+        }
+        return new String(ch);
+    }
+}
 ```
 
 
