--- a/数据结构题目/4、字符串.md
+++ b/数据结构题目/4、字符串.md
@@ -428,6 +428,54 @@ class Solution {
 
 ------
 
+### 二刷
+
+```java
+class Solution {
+    public String reverseWords(String s) {
+        StringBuilder sb = new StringBuilder();
+      
+        for(int i = s.length() - 1; i >= 0; i--){
+            // 获取当前StringBuilder对象的长度，用于在相应位置插入字符
+            int len = sb.length();
+
+            // 在当前处理位置前先插入一个空格，以便将各个单词分隔开
+            sb.insert(len, ' ');
+
+            // 跳过连续的空格
+            while(i >= 0 && s.charAt(i) == ' '){
+                i--;
+            }
+
+            // 反转处理单个单词：遇到非空格字符时，将其依次插入到StringBuilder的正确位置
+            while(i >= 0 && s.charAt(i) != ' '){
+                sb.insert(len, s.charAt(i));
+                i--;
+            }
+        }
+
+        // 删除StringBuilder末尾多余的空格
+        for(int i = sb.length() - 1; sb.charAt(i) == ' '; i--){
+            sb.deleteCharAt(i);
+        }
+
+        return sb.toString();
+    }
+}
+
+
+// 首先通过一个外层循环从后向前遍历输入字符串`s`的每个字符。对于每个字符（实际上是每个单词结束的位置），先插入一个空格以分隔单词，然后反向读取该单词的所有字符，并将其插入到StringBuilder的正确位置上。
+// 最后，移除StringBuilder末尾多余的空格，确保输出字符串中只有单词间的单个空格。最后返回处理好的字符串。
+```
+
+
+
+
+
+
+
+
+
 ### 答案
 
 解法一：
