--- a/数据结构题目/4、字符串.md
+++ b/数据结构题目/4、字符串.md
@@ -831,6 +831,52 @@ class Solution {
 
 ------
 
+### 二刷
+
+```java
+class Solution {
+    public int strStr(String haystack, String needle) {
+        // 获取原字符串和子串的长度
+        int len = haystack.length();
+        int len2 = needle.length();
+
+        // 如果原字符串长度小于子串长度，则直接返回-1，表示子串不存在于原字符串中
+        if(len < len2){
+            return -1;
+        }
+
+        // 遍历原字符串的每一个字符（索引i从0开始）
+        for(int i = 0; i < len; i++){
+            // 检查当前字符是否与子串的第一个字符相等
+            if(haystack.charAt(i) == needle.charAt(0)){
+                // 初始化两个指针index1和index2分别指向原字符串和子串的下一个待比较字符位置
+                int index1 = i + 1;
+                int index2 = 1;
+
+                // 当index1还在原字符串范围内并且index2还在子串范围内，并且对应字符相等时，继续内层循环
+                while(index1 < len && index2 < len2 && haystack.charAt(index1) == needle.charAt(index2)){
+                    // 移动两个指针到下一个待比较的位置
+                    index1++;
+                    index2++;
+                }
+
+                // 如果index2已经到达子串末尾，说明子串在原字符串中找到了匹配项，返回子串在原字符串中的起始索引
+                if(index2 == len2){
+                    return i;
+                }
+            }
+        }
+
+        // 如果遍历完原字符串后都没有找到子串，则返回-1，表示子串不在原字符串中
+        return -1;
+    }
+}
+```
+
+
+
+
+
 ###KMP算法：用于匹配字符串
 
 步骤：
