--- a/数据结构题目/5、栈与队列.md
+++ b/数据结构题目/5、栈与队列.md
@@ -318,6 +318,67 @@ class Solution {
 
 ------
 
+### 二刷
+
+```java
+class Solution {
+    public boolean isValid(String s) {
+        Stack<Character> stack = new Stack<>();
+
+        // 遍历输入字符串s中的每一个字符
+        for (int i = 0; i < s.length(); i++) {
+            // 获取当前遍历到的字符
+            char currentChar = s.charAt(i);
+            // 根据当前字符进行判断并执行相应操作
+            switch (currentChar) {
+                case '(':
+                    // 如果是左圆括号，则将其压入栈中
+                    stack.add('(');
+                    break;
+                case ')':
+                    // 如果是右圆括号，
+                    if (stack.empty() || stack.pop() != '(') {
+                        // 检查栈是否为空或者栈顶元素不是对应的左圆括号，如果是，则说明括号不匹配，直接返回false
+                        return false;
+                    }
+                    break;
+                case '{':
+                    // 同理处理左大括号
+                    stack.add('{');
+                    break;
+                case '}':
+                    if (stack.empty() || stack.pop() != '{') {
+                        return false;
+                    }
+                    break;
+                case '[':
+                    stack.add('[');
+                    break;
+                case ']':
+                    if (stack.empty() || stack.pop() != '[') {
+                        return false;
+                    }
+                    break;
+            }
+        }
+
+        // 遍历结束后，如果栈为空，则说明所有左括号都找到了对应的右括号，返回true
+        if (stack.empty()) {
+            return true;
+        }
+
+        // 否则，说明存在未匹配的左括号，返回false
+        return false;
+    }
+}
+```
+
+
+
+
+
+
+
 ### 答案思路
 
 
@@ -408,6 +469,38 @@ class Solution {
 ```
 
 ------
+
+### 二刷
+
+```java
+class Solution {
+    public String removeDuplicates(String s) {
+        Stack<Character> stack = new Stack<>();
+
+        for(int i = 0; i < s.length(); i++){
+            Character c = s.charAt(i);
+
+            if(stack.empty() || stack.peek() != c){
+                stack.add(c);
+            }else{
+                stack.pop();
+            }
+        }
+
+        //组成字符串
+        StringBuilder sb = new StringBuilder();
+        while(!stack.empty()){
+            sb.insert(0, stack.pop());
+        }
+
+        return sb.toString();
+    }
+}
+```
+
+
+
+
 
 ### 答案思路
 
