--- a/数据结构题目/5、栈与队列.md
+++ b/数据结构题目/5、栈与队列.md
@@ -634,6 +634,48 @@ class Solution {
 
 ------
 
+### 二刷
+
+```java
+class Solution {
+    public int evalRPN(String[] tokens) {
+        Stack<Integer> stack = new Stack<>();
+
+        for(int i = 0; i < tokens.length; i++){
+            if(tokens[i].equals("+")){
+                stack.add(stack.pop() + stack.pop());
+            }else if(tokens[i].equals("-")){
+                Integer num2 = stack.pop();
+                Integer num1 = stack.pop();
+                stack.add(num1 - num2);
+            }else if(tokens[i].equals("*")){
+                stack.add(stack.pop() * stack.pop());
+            }else if(tokens[i].equals("/")){
+                Integer num2 = stack.pop();
+                Integer num1 = stack.pop();
+                stack.add(num1 / num2);
+            }else{
+                stack.add(Integer.valueOf(tokens[i]));
+            }
+        }
+
+        return stack.pop();
+    }
+}
+```
+
+> 答案使用了
+>
+> ```java
+> Deque<Integer> stack = new LinkedList();
+> //add方法  对应 push方法
+> //pop方法不变
+> ```
+
+
+
+
+
 ### 答案思路
 
 和我一样
