--- a/数据结构题目/5、栈与队列.md
+++ b/数据结构题目/5、栈与队列.md
@@ -713,7 +713,7 @@ class Solution {
 
 
 
-## 六、滑动窗口最大值
+## 六、滑动窗口最大值（难）
 
 ### 题目
 
@@ -901,6 +901,48 @@ class Solution {
 ![](https://pic-1317004580.cos.ap-guangzhou.myqcloud.com/%E6%96%B0%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E6%A0%88%E4%B8%8E%E9%98%9F%E5%88%97/11.png)
 
 ------
+
+### 二刷
+
+```java
+public class Solution {
+    public int[] topKFrequent(int[] nums, int k) {
+        // 使用哈希表记录每个元素出现的频率
+        Map<Integer, Integer> frequencyMap = new HashMap<>();
+        for (int num : nums) {
+            frequencyMap.put(num, frequencyMap.getOrDefault(num, 0) + 1);
+        }
+
+        // 使用最小堆（优先队列）来存储元素及其频率，堆顶元素是当前最小频率的元素
+        PriorityQueue<Map.Entry<Integer, Integer>> minHeap = new PriorityQueue<>(
+                Comparator.comparingInt(Map.Entry::getValue)
+        );
+
+        // 遍历哈希表，将元素和频率加入最小堆
+        for (Map.Entry<Integer, Integer> entry : frequencyMap.entrySet()) {
+            minHeap.offer(entry);
+            if (minHeap.size() > k) {
+                minHeap.poll(); // 维护堆的大小为k，移除频率最小的元素
+            }
+        }
+
+        // 构造结果数组
+        int[] result = new int[k];
+        int index = 0;
+        while (!minHeap.isEmpty()) {
+            result[index++] = minHeap.poll().getKey();
+        }
+
+        return result;
+    }
+}
+```
+
+
+
+
+
+
 
 ### 答案思路
 
