--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -118,30 +118,33 @@ class Solution {
 
 ```java
 //前序遍历顺序：中-左-右，入栈顺序：中-左-右
-class Solution{
-  public List<Integer> preorderTraversal(TreeNode root){
+class Solution {
+  public List<Integer> preorderTraversal(TreeNode root) {
     List<Integer> result = new ArrayList<>();
-    if(root == null){
+    // 如果根节点为空，则二叉树为空，直接返回空列表
+    if (root == null) {
       return result;
     }
     Stack<TreeNode> stack = new Stack<>();
     stack.push(root);
-    while(!stack.isEmpty()){
+    while (!stack.isEmpty()) {
+      // 弹出栈顶节点并将其值添加到结果列表中（先访问）
       TreeNode node = stack.pop();
       result.add(node.val);
-      if(node.right != null){
+      // 将当前节点的右子节点（如果存在）压入栈中，保证后访问右子节点
+      if (node.right != null) {
         stack.push(node.right);
       }
-      if(node.left != null){
+      // 将当前节点的左子节点（如果存在）压入栈中，但由于是后添加，所以会在右子节点之前被访问（左-根-右顺序）
+      if (node.left != null) {
         stack.push(node.left);
       }
     }
+    // 遍历完成后，返回包含所有节点值按照前序遍历顺序排列的结果列表
     return result;
   }
 }
 ```
-
-
 
 
 
@@ -156,21 +159,28 @@ class Solution{
 ![](https://code-thinking.cdn.bcebos.com/gifs/%E4%BA%8C%E5%8F%89%E6%A0%91%E4%B8%AD%E5%BA%8F%E9%81%8D%E5%8E%86%EF%BC%88%E8%BF%AD%E4%BB%A3%E6%B3%95%EF%BC%89.gif)
 
 ```java
-class Solution{
-  public List<Integer> inorderTraversal(TreeNode root){
+class Solution {
+  public List<Integer> inorderTraversal(TreeNode root) {
     List<Integer> result = new ArrayList<>();
-    if(root == null){
+    if (root == null) {
       return result;
     }
     Stack<TreeNode> stack = new Stack<>();
+    // 初始化一个指针变量cur指向当前待访问的节点，初始化时设为根节点
     TreeNode cur = root;
-    while(cur != null || !stack.isEmpty()){
-      if(cur != null){
+
+    while (cur != null || !stack.isEmpty()) {
+      // 将当前节点（如果非空）一直向左移动，直到到达最左边的叶子节点
+      if (cur != null) {
         stack.push(cur);
         cur = cur.left;
-      }else{
+      } 
+      // 当当前节点为空时，表示已经到达某个子树的最左边，此时从栈顶弹出一个节点并访问
+      else {
+        // 弹出栈顶节点并将其值添加到结果列表中（中序遍历在访问完左子树后访问父节点）
         cur = stack.pop();
         result.add(cur.val);
+        // 移动到当前节点（刚刚访问过的节点）的右子节点
         cur = cur.right;
       }
     }
@@ -464,6 +474,38 @@ class Solution {
 ```
 
 ------
+
+### 二刷
+
+```java
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        traversal(root);
+        return root;
+    }
+
+    public void traversal(TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        TreeNode tmp = root.left;
+        root.left = root.right;
+        root.right = tmp;
+
+        traversal(root.right);
+        traversal(root.left);
+    }
+}
+```
+
+
+
+
+
+
+
+
 
 ### 答案思路
 
