--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -657,34 +657,34 @@ class Solution {
 代码：
 
 ```java
-    /**
-     * 递归法
-     */
-    public boolean isSymmetric1(TreeNode root) {
-        return compare(root.left, root.right);
-    }
+/**
+* 递归法
+*/
+public boolean isSymmetric1(TreeNode root) {
+  return compare(root.left, root.right);
+}
 
-    private boolean compare(TreeNode left, TreeNode right) {
+private boolean compare(TreeNode left, TreeNode right) {
 
-        if (left == null && right != null) {
-            return false;
-        }
-        if (left != null && right == null) {
-            return false;
-        }
+  if (left == null && right != null) {
+    return false;
+  }
+  if (left != null && right == null) {
+    return false;
+  }
 
-        if (left == null && right == null) {
-            return true;
-        }
-        if (left.val != right.val) {
-            return false;
-        }
-        // 比较外侧
-        boolean compareOutside = compare(left.left, right.right);
-        // 比较内侧
-        boolean compareInside = compare(left.right, right.left);
-        return compareOutside && compareInside;
-    }
+  if (left == null && right == null) {
+    return true;
+  }
+  if (left.val != right.val) {
+    return false;
+  }
+  // 比较外侧
+  boolean compareOutside = compare(left.left, right.right);
+  // 比较内侧
+  boolean compareInside = compare(left.right, right.left);
+  return compareOutside && compareInside;
+}
 ```
 
 
@@ -835,6 +835,33 @@ class Solution {
 
 
 ------
+
+### 二刷
+
+```java
+class Solution {
+    int res = 0;
+    public int maxDepth(TreeNode root) {
+        traversal(0, root);
+        return res;
+    }
+  
+    public void traversal(int num, TreeNode root){
+        if(root == null){
+            res = Math.max(num, res);
+            return;
+        }
+        num++;
+      
+        traversal(num, root.left);
+        traversal(num, root.right);
+    }
+}
+```
+
+
+
+
 
 ### 答案思路
 
