--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -976,7 +976,7 @@ class solution {
 
 ②除此之外，还要主要一个特殊情况，就是根结点没有左孩子或者右孩子时，不能返回1，因为题目说明了叶子节点是指没有子节点的节点。
 
-③所以说，如果没有左孩子，直接返回右孩子的返回值；如果没有右孩子，直接返回左孩子的返回值。
+③所以说，**如果没有左孩子，直接返回右孩子的返回值；如果没有右孩子，直接返回左孩子的返回值。**
 
 ### 我的代码
 
@@ -1021,6 +1021,49 @@ class Solution {
 ```
 
 ------
+
+### 二刷
+
+```java
+class Solution {
+  
+    int res = Integer.MAX_VALUE;
+  
+    public int minDepth(TreeNode root) {
+        // 如果根节点为空，树的深度为0
+        if(root == null){
+            return 0;
+        }
+        traversal(1, root);
+      
+        return res;
+    }
+
+    public void traversal(int num, TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        // 如果当前节点是叶子节点，更新最小深度
+        if(root.left == null && root.right == null){
+            res = Math.min(num, res);
+        }
+        num++;
+
+        traversal(num, root.left);
+        traversal(num, root.right);
+    }
+}
+
+```
+
+
+
+
+
+
+
+
 
 ### 答案思路
 
