--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -1198,6 +1198,37 @@ class Solution {
 
 ------
 
+### 二刷
+
+```java
+class Solution {
+
+    int num = 0;
+
+    public int countNodes(TreeNode root) {
+        traversal(root);
+
+        return num;
+    }
+
+    public void traversal(TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        num++;
+        traversal(root.left);
+        traversal(root.right);
+    }
+}
+```
+
+
+
+
+
+
+
 ###完全二叉树
 
 ![](https://code-thinking-1253855093.file.myqcloud.com/pics/20200920221638903-20230310123444151.png)
