--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -1315,6 +1315,40 @@ class Solution {
 
 ------
 
+### 二刷
+
+```java
+class Solution {
+    public boolean isBalanced(TreeNode root) {
+        return traversal(root) != -1;
+    }
+
+    public int traversal(TreeNode root){
+        if(root == null){
+            return 0;
+        }
+        int left = traversal(root.left);
+        int right = traversal(root.right);
+
+        if(left == -1 || right == -1){
+            return -1;
+        }
+
+        if(Math.abs(left - right) > 1){
+            return -1;
+        }
+
+        return Math.max(left, right) + 1;
+    }
+}
+```
+
+
+
+
+
+
+
 ### 思路
 
 1）高度和深度
