--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -1589,6 +1589,57 @@ class Solution {
 
 
 
+
+
+### 二刷
+
+```java
+class Solution {
+
+    List<String> res = new ArrayList<>();
+    StringBuilder sb = new StringBuilder();
+
+    public List<String> binaryTreePaths(TreeNode root) {
+        if(root == null){
+            return res;
+        }
+      //先把头结点加进去
+        sb.append(root.val + "->");
+        traversal(root);
+
+        return res;
+    }
+
+    public void traversal(TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        if(root.left == null && root.right == null){
+            //遇到叶子节点就增加一条路径
+            res.add(sb.substring(0, sb.length() - 2));
+            return;
+        }
+
+        if(root.left != null){
+            String s = root.left.val + "->";
+            sb.append(s);
+            traversal(root.left);
+            sb.delete(sb.length() - s.length(), sb.length());
+        }
+        
+        if(root.right != null){
+            String s = root.right.val + "->";
+            sb.append(s);
+            traversal(root.right);
+            sb.delete(sb.length() - s.length(), sb.length());
+        }
+    }
+}
+```
+
+
+
 ------
 
 ### 答案思路
