--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -1803,6 +1803,43 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+
+    int res = 0;
+    public int sumOfLeftLeaves(TreeNode root) {
+        traversal(root);
+
+        return res;
+    }
+
+    public void traversal(TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        if(root.left != null){
+            TreeNode left = root.left;
+            if(left.left == null && left.right == null){
+              //如果是左叶子节点
+                res += left.val;
+            }else{
+                traversal(root.left);
+            }
+        }
+
+        traversal(root.right);
+        
+    }
+}
+```
+
+
+
+
+
 ### 答案代码
 
 ```java
