--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -1926,6 +1926,52 @@ class Solution {
 
 ------
 
+### 二刷
+
+```java
+class Solution {
+    public int findBottomLeftValue(TreeNode root) {
+        Deque<TreeNode> queue = new LinkedList<>();
+
+        //当前层的个数
+        int cur;
+        //下一层的个数
+        int next = 1;
+        int res = root.val;
+
+        queue.add(root);
+
+        //层序遍历
+        while(next > 0){
+            cur = next;
+            next = 0;
+            res = queue.peek().val;
+            while(cur > 0){
+                //遍历当前层
+                TreeNode node = queue.pop();
+                if(node.left != null){
+                    queue.add(node.left);
+                    next++;
+                }
+                if(node.right != null){
+                    queue.add(node.right);
+                    next++;
+                }
+                cur--;
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+
+
+
+
 ### 答案思路
 
 ①使用递归
