--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -2366,6 +2366,51 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public TreeNode constructMaximumBinaryTree(int[] nums) {
+        return traversal(nums, 0, nums.length);
+    }
+
+    public TreeNode traversal(int[] nums, int start, int end){
+        if(start >= end){
+            return null;
+        }
+        //找出最大值的索引
+        int index = findMax(nums, start, end);
+        //创建根结点
+        TreeNode root = new TreeNode(nums[index]);
+
+        //左子树
+        root.left = traversal(nums, start, index);
+        //右子树
+        root.right = traversal(nums, index + 1, end);
+
+        return root;
+    }
+
+    public int findMax(int[] nums, int start, int end){
+        int maxNum = nums[start];
+        int index = start;
+
+        for(int i = start + 1; i < end; i++){
+            if(nums[i] > maxNum){
+                maxNum = nums[i];
+                index = i;
+            }
+        }
+
+        return index;
+    }
+}
+```
+
+
+
+
+
 ### 答案代码
 
 只需要使用一个区间就可以实现！
