--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -2491,6 +2491,37 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public TreeNode mergeTrees(TreeNode root1, TreeNode root2) {
+        if(root1 == null && root2 == null){
+            return null;
+        }
+
+        TreeNode node = new TreeNode(0);
+
+        if(root1 != null){
+            node.val += root1.val;
+        }
+
+        if(root2 != null){
+            node.val += root2.val;
+        }
+
+        node.left = mergeTrees(root1 == null? null : root1.left, root2 == null? null : root2.left);
+        node.right = mergeTrees(root1 == null? null : root1.right, root2 == null? null : root2.right);
+
+        return node;
+    }
+}
+```
+
+
+
+### 答案
+
 ```java
 class Solution {
     // 使用栈迭代
