--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -2666,6 +2666,38 @@ class Solution {
 
 
 
+### 二刷
+
+````java
+class Solution {
+    public TreeNode searchBST(TreeNode root, int val) {
+        if(root == null){
+            return null;
+        }
+
+        if(root.val == val){
+            return root;
+        }
+
+        TreeNode left = searchBST(root.left, val);
+        if(left != null){
+            return left;
+        }
+
+        TreeNode right = searchBST(root.right, val);
+        if(right != null){
+            return right;
+        }
+        
+        return null;
+    }
+}
+````
+
+
+
+
+
 ### 答案思路
 
 题目说该二叉树是二叉搜索树，二叉搜索树是一个有序树：
