--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -2784,6 +2784,36 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    TreeNode pre;
+    public boolean isValidBST(TreeNode root) {
+        if(root == null){
+            return true;
+        }
+        //左
+        boolean left = isValidBST(root.left);
+        if(!left){
+            return false;
+        }
+        //中
+        if(pre != null && pre.val >= root.val){
+            return false;
+        }
+        pre = root;
+        //右
+        boolean right = isValidBST(root.right);
+        return right;
+    }
+}
+```
+
+
+
+
+
 ### 思路
 
 * **中序遍历下，输出的二叉搜索树节点的数值是有序序列**
