--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -2946,6 +2946,40 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    int pre = -1;
+    int res = Integer.MAX_VALUE;
+    public int getMinimumDifference(TreeNode root) {
+        traversal(root);
+
+        return res;
+    }
+
+    public void traversal(TreeNode root){
+        if(root == null){
+            return;
+        }
+        //左
+        traversal(root.left);
+        //中
+        if(pre != -1){
+            res = Math.min(res, root.val - pre);
+        }
+        //记录上一个节点
+        pre = root.val;
+        //右
+        traversal(root.right);
+    }
+}
+```
+
+
+
+
+
 ### 答案思路
 
 使用双指针
