--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -3067,6 +3067,66 @@ class Solution {
 
 
 
+
+### 二刷
+
+```java
+class Solution {
+    //上一个值
+    int pre;
+    //num:当前值的累积个数
+    //res：当前最大个数
+    int num, res;
+    List<Integer> list = new ArrayList<>();
+
+    public int[] findMode(TreeNode root) {
+        pre = root.val;
+        res = 0;
+        num = 0;
+        traversal(root);
+        int[] arr = new int[list.size()];
+        for(int i = 0; i < list.size(); i++){
+            arr[i] = list.get(i);
+        }
+
+        return arr;
+    }
+
+    public void traversal(TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        //左
+        traversal(root.left);
+
+        //中
+        if(root.val == pre){
+            num++;
+        }else{
+            res = Math.max(res, num);
+            pre = root.val;
+            num = 1;
+        }
+
+        if(num > res){
+            list.clear();
+            list.add(pre);
+        }else if(num == res){
+            list.add(pre);
+        }
+
+        //右
+        traversal(root.right);
+    }
+}
+```
+
+
+
+
+
+
 ### 代码
 
 ```java
