--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -3263,6 +3263,44 @@ left与right的逻辑处理;         // 中
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if(root == null){
+            return null;
+        }
+
+        //左
+        TreeNode left = lowestCommonAncestor(root.left, p, q);
+        //右
+        TreeNode right = lowestCommonAncestor(root.right, p, q);
+
+        //中
+        TreeNode cur = null;
+        if(root.val == p.val || root.val == q.val){
+            cur = root;
+        }
+
+        if(cur == null){
+            if(left != null && right != null){
+                return root;
+            }else if(left != null){
+                return left;
+            }else if(right != null){
+                return right;
+            }
+        }
+        return cur;
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
