--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -3462,6 +3462,41 @@ class Solution{
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public TreeNode insertIntoBST(TreeNode root, int val) {
+        if(root == null){
+            return new TreeNode(val);
+        }
+        traversal(root,val);
+
+        return root;
+    }
+
+    public void traversal(TreeNode root, int val){
+        if(root.val < val){
+            if(root.right == null){
+                root.right = new TreeNode(val);
+                return;
+            }
+            traversal(root.right, val);
+        }else{
+            if(root.left == null){
+                root.left = new TreeNode(val);
+                return;
+            }
+            traversal(root.left, val);
+        }
+    }
+}
+```
+
+
+
+
+
 
 ### 代码
 
