--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -3718,6 +3718,60 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public TreeNode deleteNode(TreeNode root, int key) {
+        return traversal(null, root, key);
+    }
+
+    public TreeNode traversal(TreeNode pre, TreeNode root, int key){
+        if(root == null){
+            return null;
+        }
+
+        if(root.val < key){
+            traversal(root, root.right, key);
+        }
+
+        if(root.val > key){
+            traversal(root, root.left, key);
+        }
+
+        if(root.val == key){
+            TreeNode right = root.right;
+            if(right != null){
+                //把删除节点的左子树放到右子树的最左叶子节点
+                while(right.left != null){
+                    right = right.left;
+                }
+                right.left = root.left;
+                root.left = null;
+            }
+
+            TreeNode son = root.right == null ? root.left : root.right;
+
+            if(pre == null){
+                return son;
+            }
+
+            if(pre != null && root.val < pre.val){
+                //放到父节点的左子树
+                pre.left = son;
+            }else if(pre != null && root.val > pre.val){
+                //右子树
+                pre.right = son;
+            }
+        }
+
+        return root;
+    }
+}
+```
+
+
+
 
 
 ### 答案思路
