--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -3905,6 +3905,40 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public TreeNode trimBST(TreeNode root, int low, int high) {
+        if(root == null){
+            return null;
+        }
+
+        //左
+        root.left = trimBST(root.left, low, high);
+        //右
+        root.right = trimBST(root.right, low, high);
+
+        //中
+        if(root.val < low){
+            return root.right;
+        }
+
+        if(root.val > high){
+            return root.left;
+        }
+
+        return root;
+    }
+}
+```
+
+
+
+
+
+
+
 ### 答案思路
 
 发现节点0并不符合区间要求，那么将节点0的右孩子 节点2 直接赋给 节点3的左孩子就可以了（就是把节点0从二叉树中移除），如图：
