--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -4070,6 +4070,43 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public TreeNode sortedArrayToBST(int[] nums) {
+        return traversal(nums, 0, nums.length);
+    }
+
+    public TreeNode traversal(int[] nums, int start, int end){
+        int len = end - start;
+
+        if(len < 3){
+            TreeNode root = new TreeNode(nums[start]);
+            if(len == 2){
+                root.right = new TreeNode(nums[start+1]);
+            }
+
+            return root;
+        }
+
+
+        int middle = start + len / 2;
+        TreeNode root = new TreeNode(nums[middle]);
+        //左
+        if(middle - start > 0){
+            root.left = traversal(nums,start,middle);
+        }
+        //右
+        if(end - middle > 1){
+            root.right = traversal(nums,middle+1,end);
+        }
+        //中
+        return root;
+    }
+}
+```
+
 
 
 
