--- a/数据结构题目/6、二叉树.md
+++ b/数据结构题目/6、二叉树.md
@@ -4172,6 +4172,37 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    int num = 0;
+
+    public TreeNode convertBST(TreeNode root) {
+        traversal(root);
+        return root;
+    }
+
+    public void traversal(TreeNode root){
+        if(root == null){
+            return;
+        }
+
+        //右
+        traversal(root.right);
+
+        //中
+        num += root.val;
+        root.val = num;
+
+        //左
+        traversal(root.left);
+    }
+}
+```
+
+
+
 
 
 ### 答案思路
