--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -62,6 +62,40 @@ void backtracking(参数){
 * 可以剪枝的地方就在递归中每一层的for循环所选择的起始位置。
 * 如果for循环选择的起始位置之后的元素个数已经不足我们需要的元素个数了，那么就没右必要搜索了
 
+
+
+### 二刷
+
+```java
+class Solution {
+
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> path = new ArrayList<>();
+
+    public List<List<Integer>> combine(int n, int k) {
+        backtracking(n,k,1);
+        return res;
+    }
+
+    public void backtracking(int n, int k, int index){
+        if(path.size() == k){
+            res.add(new ArrayList<>(path));
+            return;
+        }
+
+        for(int i = index; i <= n - (k - path.size()) + 1; i++){
+            path.add(i);
+            backtracking(n,k,i+1);
+            path.removeLast();
+        }
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
