--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -214,6 +214,40 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> path = new ArrayList<>();
+    int sum = 0;
+
+    public List<List<Integer>> combinationSum3(int k, int n) {
+        backtracking(k,n,1);
+        return res;
+    }
+
+    public void backtracking(int k, int n, int index){
+        if(path.size() == k){
+            if(sum == n){
+                res.add(new ArrayList<>(path));
+            }
+            return;
+        }
+
+        for(int i = index; i <= 9 - (k - path.size()) + 1; i++){
+            path.add(i);
+            sum += i;
+            backtracking(k,n,i + 1);
+            sum -= i;
+            path.removeLast();
+        }
+    }
+}
+```
+
+
+
 
 
 ### 答案代码
