--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -381,6 +381,56 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    char[][] arr = {{},{},{'a','b','c'},{'d','e','f'},
+                    {'g','h','i'},{'j','k','l'},{'m','n','o'},
+                    {'p','q','r','s'},{'t','u','v'},{'w','x','y','z'}};
+
+    List<String> res = new ArrayList<>();
+    StringBuilder sb = new StringBuilder();
+
+    public List<String> letterCombinations(String digits) {
+        int len = digits.length();
+        if(len == 0){
+            return res;
+        }
+        
+        int[] digitsArr = new int[len];
+        for(int i = 0; i < len; i++){
+            digitsArr[i] = digits.charAt(i) - '0';
+        }
+
+        backtracking(digitsArr, len, 0);
+
+        return res;
+    }
+
+    public void backtracking(int[] digitsArr, int n, int index){
+        if(sb.length() == n){
+            res.add(sb.toString());
+            return;
+        }
+
+        //两层for循环
+        //1.遍历digits  2.遍历数字对应的字母
+        for(int i = index; i < n; i++){
+            for(int j = 0; j < arr[digitsArr[i]].length; j++){
+                sb.append(arr[digitsArr[i]][j]);
+                backtracking(digitsArr, n, i + 1);
+                sb.deleteCharAt(sb.length() - 1);
+            }
+        }
+    }
+}
+```
+
+
+
+
+
 ```java
 //答案代码
 class Solution {
