--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -551,6 +551,44 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+
+    int sum = 0;
+    List<Integer> path = new ArrayList<>();
+    List<List<Integer>> res = new ArrayList<>();
+
+    public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        backtracking(candidates, target, 0);
+
+        return res;
+    }
+
+    public void backtracking(int[] candidates, int target, int index){
+        if(sum == target){
+            res.add(new ArrayList(path));
+            return;
+        }else if(sum > target){
+            return;
+        }
+
+        for(int i = index; i < candidates.length; i++){
+            path.add(candidates[i]);
+            sum += candidates[i];
+            backtracking(candidates, target, i);
+            sum -= candidates[i];
+            path.removeLast();
+        }
+    }
+}
+```
+
+
+
+
+
 ### 答案代码
 
 优化：
@@ -657,6 +695,56 @@ class Solution {
 
 }
 ```
+
+
+
+
+
+### 二刷
+
+```java
+class Solution {
+
+    List<List<Integer>> result = new ArrayList<>();
+    LinkedList<Integer> path = new LinkedList<>();
+    int sum = 0;
+
+    public List<List<Integer>> combinationSum2(int[] candidates, int target) {
+        Arrays.sort(candidates);
+        backtracking(candidates,target,0);
+        return result;
+    }
+
+    public void backtracking(int[] candidates, int target, int start){
+        if(target == sum){
+            result.add(new ArrayList<>(path));
+            return;
+        }
+
+        for(int i = start; i < candidates.length; i++){
+            //剪枝1：避免重复解
+            if(i > start && candidates[i] == candidates[i-1]){
+                continue;
+            }
+            //剪枝2：如果已经大于target，就不用继续了
+            if(sum + candidates[i] > target){
+                break;
+            }
+
+            path.add(candidates[i]);
+            sum += candidates[i];
+            backtracking(candidates, target, i + 1);
+            sum -= candidates[i];
+            path.removeLast();
+
+        }
+
+    }
+
+}
+```
+
+
 
 
 
