--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -942,6 +942,73 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+
+    List<String> res = new ArrayList<>();
+    StringBuilder sb;
+
+    public List<String> restoreIpAddresses(String s) {
+        sb = new StringBuilder(s);
+
+        backtracking(0, 0);
+
+        return res;
+    }
+
+    public void backtracking(int start, int point){
+        if(point == 3){
+            ///判断最后一段是否合格
+            if(isValid(sb, start, sb.length() - 1)){
+                res.add(sb.toString()); 
+            }
+            return;
+        }
+
+        for(int i = start; i < sb.length(); i++){
+            if(isValid(sb, start, i)){
+                sb.insert(i+1, ".");
+                backtracking(i + 2, point+1);
+                sb.deleteCharAt(i+1);
+            }else{
+                break;
+            }
+        }
+
+    }
+
+    //判断区间是否合规[start, end]
+    public boolean isValid(StringBuilder sb, int start, int end){
+        if(start > end){
+            return false;
+        }
+
+        if(sb.charAt(start) == '0' && start != end){
+            return false;
+        }
+
+        int num = 0;
+        for(int i = start; i <= end; i++){
+            if(sb.charAt(i) < '0' || sb.charAt(i) > '9'){
+                return false;
+            }
+            num = num * 10 + (sb.charAt(i) - '0');
+            if(num > 255){
+                return false;
+            }
+        }
+
+        return true;
+    }
+}
+```
+
+
+
+
+
 
 
 ##九、子集
