--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -1056,6 +1056,38 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+
+    List<List<Integer>> result = new ArrayList<>();
+    LinkedList<Integer> path = new LinkedList<>();
+
+    public List<List<Integer>> subsets(int[] nums) {
+        backtracking(nums,0);
+        
+        return result;
+    }
+
+    public void backtracking(int[] nums, int startIndex){
+        result.add(new ArrayList<>(path));
+
+        if (startIndex >= nums.length){
+            return;
+        }
+        
+        for(int i = startIndex; i < nums.length; i++){
+            path.add(nums[i]);
+            backtracking(nums, i + 1);
+            path.removeLast();
+        }
+    }
+}
+```
+
+
+
 
 
 ##十、子集Ⅱ
