--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -1141,6 +1141,42 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+
+    LinkedList<Integer> path = new LinkedList<>();
+    List<List<Integer>> result = new ArrayList<>();
+
+
+    public List<List<Integer>> subsetsWithDup(int[] nums) {
+        //需要进行排序，目的是让相同的数字放到一起
+        Arrays.sort(nums);
+        backtracking(nums,0);
+        return result;
+    }
+
+    public void backtracking(int[] nums, int startIndex){
+        result.add(new ArrayList<>(path));
+
+        for(int i = startIndex;i < nums.length;i++){
+            //在子集的基础上做一个判断
+            if(i > startIndex && nums[i] == nums[i - 1]){
+                continue;
+            }
+            path.add(nums[i]);
+            backtracking(nums,i + 1);
+            path.removeLast();
+        }
+    }
+
+
+}
+```
+
+
+
 
 
 ## 十一、递增子序列
