--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -1233,6 +1233,43 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+
+    List<List<Integer>> result = new ArrayList<>();
+    LinkedList<Integer> path = new LinkedList<>();
+
+    public List<List<Integer>> findSubsequences(int[] nums) {
+        backtracking(nums, 0);
+        return result;
+    }
+
+    public void backtracking(int[] nums, int startIndex){
+        if(path.size() >= 2){
+            result.add(new ArrayList<>(path));
+        }
+
+        HashSet<Integer> set = new HashSet<>();
+        for(int i = startIndex; i < nums.length; i++){
+            if(path.size() != 0 && path.getLast() > nums[i]){
+                continue;
+            }
+            //同一层下不能选择相同的数字
+            if(set.contains(nums[i])){
+                continue;
+            }
+
+            set.add(nums[i]);
+            path.add(nums[i]);
+            backtracking(nums, i+1);
+            path.removeLast();
+        }
+    }
+}
+```
+
 
 
 ## 十二、全排列
@@ -1247,6 +1284,7 @@ class Solution {
 
 * 使用boolean数组，用过的赋值为true，没用过的赋值为false。
 * ![](https://code-thinking-1253855093.file.myqcloud.com/pics/20201209174225145.png)
+
 
 
 
@@ -1285,6 +1323,46 @@ class Solution {
     }
 }
 ```
+
+
+
+### 二刷
+
+```java
+class Solution {
+
+    List<List<Integer>> result = new ArrayList<>();
+    LinkedList<Integer> path = new LinkedList<>();
+    boolean[] used;
+
+    public List<List<Integer>> permute(int[] nums) {
+        used = new boolean[nums.length];
+        backtracking(nums);
+
+        return result;
+    }
+
+    public void backtracking(int[] nums){
+        if(path.size() == nums.length){
+            result.add(new ArrayList<>(path));
+            return;
+        }
+
+        for(int i = 0; i < nums.length; i++){
+            if(used[i]){
+                continue;
+            }
+            path.add(nums[i]);
+            used[i] = true;
+            backtracking(nums);
+            used[i] = false;
+            path.removeLast();
+        }
+    }
+}
+```
+
+
 
 
 
